--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "bulma": "^0.9.4",
+    "bulma-carousel": "^4.0.24",
+    "bulma-toast": "^2.4.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
